# autograd_tensor_by_cpp

./: CMakeLists.txt  README.md  Tensor.cpp  Tensor.h
Array/: Array.cpp  Array.h  CMakeLists.txt  array_main.cpp
