CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( Tensor )

AUX_SOURCE_DIRECTORY( . TENSOR_SRCS )
AUX_SOURCE_DIRECTORY( Array ARRAY_SRCS )

FILE( GLOB_RECURSE HEADERS *.h )
SOURCE_GROUP( "Include" FILES ${HEADERS} )

set( CMAKE_CXX_STANDARD 11 )

ADD_LIBRARY( _tensor_shared SHARED ${TENSOR_SRCS} ${ARRAY_SRCS} ${HEADERS})
ADD_LIBRARY( _tensor ${TENSOR_SRCS} ${ARRAY_SRCS} ${HEADERS})
ADD_EXECUTABLE( Tensor ${TENSOR_SRCS} ${ARRAY_SRCS} ${HEADERS} )
